Prevent horizontal scrolling of mobile menu

--- a/src/index.css
+++ b/src/index.css
@@ -523,6 +523,7 @@ footer a {
     box-shadow: 0 0 2px 2px rgba(0,0,0,0.5);
     transition: all 0.2s;
     overflow-y: auto;
+    overflow-x: hidden;
     z-index: 100;
   }
 
